--- a/dev-manifeast.yml
+++ b/dev-manifeast.yml
@@ -1,8 +1,6 @@
 ---
 applications:
 - name: album-service
-  env:
-    GRANT_TYPE: client_credentials
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
   routes:
     - route: album-service-rohitputtaraju.cfapps.io
@@ -10,15 +8,12 @@ applications:
   - album-database
   - photo-storage
 - name: movie-service
-  env:
-    GRANT_TYPE: client_credentials
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
   routes:
     - route: movie-service-rohitputtaraju.cfapps.io
   services:
   - movie-database
 - name: movie-fun-app
-
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
   routes:
     - route: movie-fun-app-rohitputtaraju.cfapps.io
@@ -26,6 +21,17 @@ applications:
   - photo-storage
   - movie-fun-sso
   env:
-    GRANT_TYPE: authorization_code
     ALBUMS_URL: http://album-service-rohitputtaraju.cfapps.io/albums
     MOVIES_URL: http://movie-service-rohitputtaraju.cfapps.io/movies
+- name: album-service
+  env:
+    GRANT_TYPE: client_credentials
+  # ...
+- name: movie-service
+  env:
+    GRANT_TYPE: client_credentials
+  # ...
+- name: movie-fun-app
+  env:
+    # ...
+    GRANT_TYPE: authorization_code
