--- a/applications/movie-fun-app/build.gradle
+++ b/applications/movie-fun-app/build.gradle
@@ -11,6 +11,7 @@ description = "OpenEJB :: Web Examples :: Moviefun"
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:$springCloudServicesClientLibrariesVersion"
     }
 }
 
@@ -34,6 +35,7 @@ dependencies {
     compile "org.apache.tomcat.embed:tomcat-embed-jasper:8.5.6"
 
     testCompile "junit:junit:$junitVersion"
+    compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
 }
 
 test {
